force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/Apttus_Config2__ConfigSmartSearchSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Smart Search Settings</description>
    <label>Config Smart Search Settings</label>
</CustomObject>