force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__CurrentSyncStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__CurrentSyncStatus__c</fullName>
    <description>Sync status will be one of the following: INITIAL SYNC, SYNC IN PROGRESS, LAST SYNC SUCCESS, LAST SYNC FAILURE</description>
    <inlineHelpText>Sync status will be one of the following: INITIAL SYNC, SYNC IN PROGRESS, LAST SYNC SUCCESS, LAST SYNC FAILURE</inlineHelpText>
    <label>Current Sync Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>