force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__Flow__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Flow__c</fullName>
    <label>Flow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>