force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__LastAttemptedSync__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LastAttemptedSync__c</fullName>
    <description>Last datetime of attempted sync job</description>
    <inlineHelpText>Last datetime of attempted sync job</inlineHelpText>
    <label>Last Attempted Sync</label>
    <type>DateTime</type>
</CustomField>