force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__LastSuccessfulSync__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LastSuccessfulSync__c</fullName>
    <description>Datetime of last successful sync</description>
    <inlineHelpText>Datetime of last successful sync</inlineHelpText>
    <label>Last Successful Sync</label>
    <type>DateTime</type>
</CustomField>