force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__SearchEnvironment__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SearchEnvironment__c</fullName>
    <description>Supported search environments:
SOLR
AZURE</description>
    <inlineHelpText>Supported search environments:
SOLR
AZURE</inlineHelpText>
    <label>Search Environment</label>
    <length>5</length>
    <type>Text</type>
</CustomField>