force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__SyncHasErrors__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SyncHasErrors__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync Has Errors</label>
    <type>Checkbox</type>
</CustomField>