force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__Typeahead__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Typeahead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox used to determine which row will be used for typeahead</description>
    <inlineHelpText>Checkbox used to determine which row will be used for typeahead</inlineHelpText>
    <label>Typeahead</label>
    <type>Checkbox</type>
</CustomField>