force-app/main/default/objects/Apttus_Config2__ConfigSmartSearchSettings__c/fields/Apttus_Config2__Weightage__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Weightage__c</fullName>
    <label>Weightage</label>
    <length>3</length>
    <type>Text</type>
</CustomField>